// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`propToStyle() when receives an argument with breakpoints renders all breakpoints resolutions 1`] = `
Array [
  Array [
    "@media screen and (min-width:",
    "0",
    "px){",
    "text-align: center;",
    "}",
  ],
  Array [
    "@media screen and (min-width:",
    "480",
    "px){",
    "text-align: center;",
    "}",
  ],
  Array [
    "@media screen and (min-width:",
    "768",
    "px){",
    "text-align: right;",
    "}",
  ],
  Array [
    "@media screen and (min-width:",
    "992",
    "px){",
    "text-align: right;",
    "}",
  ],
  Array [
    "@media screen and (min-width:",
    "1200",
    "px){",
    "text-align: left;",
    "}",
  ],
]
`;

exports[`propToStyle() when receives an argument with breakpoints renders only one breakpoint resolution 1`] = `
Array [
  Array [
    "@media screen and (min-width:",
    "0",
    "px){",
    "text-align: center;",
    "}",
  ],
]
`;

exports[`propToStyle() when receives an argument with breakpoints renders two or more breakpoints resolutions 1`] = `
Array [
  Array [
    "@media screen and (min-width:",
    "0",
    "px){",
    "text-align: center;",
    "}",
  ],
  Array [
    "@media screen and (min-width:",
    "768",
    "px){",
    "text-align: right;",
    "}",
  ],
]
`;
